--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ffmpeg-static": "^4.2.8",
     "lru-cache": "^6.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1"
